testsuite/tests/parser/should_fail/BranchHints3.hs
module M where

f = if undefined then {-# LIKELY 1 #-} undefined else undefined